[[bin]]
name = "fa2b2"

[package]
name = "fa2b2"
version = "0.2.0"
authors = ["Roel Kluin <r.kluin@nki.nl>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
bio = "*"
flate2 = "^1.0.22"
csv = "^1.1.6"
arrayvec = "^0.7.2"
bincode = "^1.3.3"
clap = "^2.34.0"
bit_reverse = "^0.1.8"
derive-new = "^0.5.9"
num-traits = "^0.2.14"
num = "^0.4.0"
rand = "^0.8.4"
lazy_static = "^1.4.0"
serde = "^1.0.133"
anyhow = "^1.0.52"
ahash = { version = "^0.7.6", "features" = ["serde"] }

[profile.release]
debug = true
