[[bin]]
name = "fa2b2"

[package]
name = "fa2b2"
version = "0.2.1"
authors = ["Roel Kluin <r.kluin@nki.nl>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
flate2 = "^1.0.22"
csv = "^1.1.6"
arrayvec = "^0.7.2"
bincode = "^1.3.3"
smallvec = "1.8.0"
clap = "^2.34.0"
derive-new = "^0.5.9"
num-traits = "^0.2.14"
num = "^0.4.0"
rand = "^0.8.4"
lazy_static = "^1.4.0"
serde = {version = "^1.0.133", features = ["derive"]}
anyhow = "^1.0.52"
ahash = { version = "^0.7.6", "features" = ["serde"] }
noodles-fasta = "0.5.1"
noodles-bam = "0.12.0"
noodles-cram = "0.9.0"
noodles-fastq = "0.3.0"
derive_more = "0.99.17"

[profile.release]
debug = true
