[[bin]]
name = "fa2b2"

[package]
name = "fa2b2"
version = "0.2.1"
authors = ["Roel Kluin <r.kluin@nki.nl>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
flate2 = "^1.0"
csv = "^1.2"
arrayvec = "^0.7"
bincode = "^1.3"
smallvec = "^1.10"
clap = {version = "^4.1", features = ["derive"]}
derive-new = "^0.5"
num-traits = "^0.2"
to_default = "^0.1"
num = "^0.4"
rand = "^0.8"
lazy_static = "^1.4"
serde = {version = "^1.0", features = ["derive"]}
anyhow = "^1.0"
ahash = { version = "^0.8", "features" = ["serde"] }
noodles-fasta = "^0.5"
noodles-bam = "^0.12"
noodles-cram = "^0.9"
noodles-fastq = "^0.3"
derive_more = "^0.99"
moveslice = "^2.0"
bitvec = { version = "^1.0", "features" = ["serde"]}
crossbeam = "^0.8"
crossbeam-channel = "^0.5"
crossbeam-queue = "^0.3"
crossbeam-utils = "^0.8"
itertools = "^0.10"
tempfile = "^3"

[profile.release]
debug = true

